--- a/domFinalOpdracht/style.css
+++ b/domFinalOpdracht/style.css
@@ -1,38 +1,43 @@
+  
 #home {
-  background: lightgrey;
-  padding: 5px;
-  width: 100px;
-  margin: 4px;
-  border: 2px black solid;
-}
+    background: lightgrey;
+    padding: 5px;
+    width: 100px;
+    margin: 4px;
+    border: 2px black solid;
+  }
+  
+  #green {
+    background: lightgreen;
+    padding: 5px;
+    width: 100px;
+    margin: 4px;
+    border: 2px black solid;
+  }
+  
+  #yellow {
+    background: yellow;
+    padding: 5px;
+    width: 100px;
+    margin: 4px;
+    border: 2px black solid;
+  }
+  
+  #blue {
+    background: lightblue;
+    padding: 5px;
+    width: 100px;
+    margin: 4px;
+    border: 2px black solid;
+  }
+  
+  .icon {
+    padding: 10px;
+    margin: 10px;
+    width: 30;
+    height: 30;
+  }
 
-#green {
-  background: lightgreen;
-  padding: 5px;
-  width: 100px;
-  margin: 4px;
-  border: 2px black solid;
-}
-
-#yellow {
-  background: yellow;
-  padding: 5px;
-  width: 100px;
-  margin: 4px;
-  border: 2px black solid;
-}
-
-#blue {
-  background: lightblue;
-  padding: 5px;
-  width: 100px;
-  margin: 4px;
-  border: 2px black solid;
-}
-
-.icon {
-  padding: 10px;
-  margin: 10px;
-  width: 30;
-  height: 30;
-}
+  ul {
+    list-style-type: none;
+  }
